--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 addopts = --ds=config.settings.test --reuse-db
 python_files = tests.py test_*.py
+
+# Disable these, as they require a DB which we're not using
+norecursedirs = "value_of_information_webapp/users/tests"
