--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["tadamcz <tmkadamcz@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.8.13"
 pytz = "2022.1"
 python-slugify = "6.1.1"
 Pillow = "9.0.1"
