--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-allauth = "0.50.0"
 django-crispy-forms = "1.14.0"
 crispy-bootstrap5 = "0.6"
 django-redis = "5.2.0"
+whitenoise = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
