--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+# This is used by Dokku in production
+# Secret environment variables must be set with `dokku config:set`
+
+export DJANGO_SETTINGS_MODULE=config.settings.production
 export DISABLE_COLLECTSTATIC=1
