--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-crispy-forms = "1.14.0"
 crispy-bootstrap5 = "0.6"
 django-redis = "5.2.0"
 whitenoise = "^6.0.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
