--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ pytz = "2022.1"
 python-slugify = "6.1.1"
 Pillow = "9.0.1"
 argon2-cffi = "21.3.0"
-redis = "4.2.0"
+redis = ">3"
 hiredis = "2.0.0"
 Django = "3.2.12"
 django-environ = "0.8.1"
@@ -21,6 +21,8 @@ crispy-bootstrap5 = "0.6"
 django-redis = "5.2.0"
 whitenoise = "^6.0.0"
 gunicorn = "^20.1.0"
+boltons = "^21.0.0"
+django-q = "^1.3.9"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
