--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "value-of-information"]
 	path = value-of-information
-	url = ../value-of-information
+	url = git@github.com:tadamcz/value-of-information
