--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ whitenoise = "^6.0.0"
 gunicorn = "^20.1.0"
 boltons = "^21.0.0"
 django-q = "^1.3.9"
-value-of-information = { path = "./value-of-information/"}
+value-of-information = { path = "./value-of-information/", develop=true}
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
