--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ gunicorn = "^20.1.0"
 boltons = "^21.0.0"
 django-q = "^1.3.9"
 value-of-information = { path = "./value-of-information/", develop=true}
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
