--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ boltons = "^21.0.0"
 django-q = "^1.3.9"
 value-of-information = { path = "./value-of-information/", develop=true}
 psycopg2 = "^2.9.3"
+django-widget-tweaks = "^1.4.12"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
