--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
-addopts = --ds=config.settings.test --reuse-db
-python_files = tests.py test_*.py
+addopts = --reuse-db
+python_files = test_*.py
+DJANGO_SETTINGS_MODULE = config.settings.local
