--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ django-q = "^1.3.9"
 value-of-information = { path = "./value-of-information/", develop=true}
 psycopg2 = "^2.9.3"
 django-widget-tweaks = "^1.4.12"
+Markdown = "^3.3.7"
 
 [tool.poetry.dev-dependencies]
 Werkzeug = {version = "2.0.", extras = ["watchdog"]}
