--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "value_of_information_webapp"
 version = "0.1.0"
 description = ""
-authors = ["tadamcz <tmkadamcz@gmail.com>"]
+authors = ["tadamcz <tadamczewskipublic@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "3.8.13"
