--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,11 @@ django-widget-tweaks = "^1.4.12"
 Markdown = "^3.3.7"
 django-markdownify = "^0.9.1"
 nonstd = { git = "https://github.com/tadamcz/nonstd", rev = "fa3c3f3696990b8b6d12ac23bb3697defa8574c9" }
+django-capture-tag = "^1.0"
+metalogistic = "0.0.12"
 
 [tool.poetry.dev-dependencies]
-Werkzeug = {version = "2.0", extras = ["watchdog"]}
+Werkzeug = {version = "*", extras = ["watchdog"]}
 ipdb = "0.13.9"
 psycopg2-binary = "2.9.3"
 mypy = "0.942"
@@ -43,7 +45,7 @@ sphinx-autobuild = "~=2021.3"
 flake8 = "4.0.1"
 flake8-isort = "4.1.1"
 coverage = "6.3.2"
-black = "22.3.0"
+black = "*"
 pylint-django = "2.5.3"
 pre-commit = "2.17.0"
 factory-boy = "3.2.1"
